2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_PROG_CP invocation.
	* m4/cp.m4: Remove file.
	* m4/ln.m4 (CL_PROG_LN): Assume "cp -p" works on Unix.
	* makemake.in (CP): Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/closedir.m4 (CL_CLOSEDIR): Remove check for the prototype.
	Don't define RETCLOSEDIRTYPE any more.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_VOID invocation.
	* m4/general.m4 (CL_FFCALL_COMMON_TRAMPOLINE): Likewise.
	* m4/cc-void.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_CC_NEED_CCPAUX invocation.
	* m4/cc-cppaux.m4: Remove file.
	* makemake.in (CC_NEED_CCPAUX, XCC_NEED_CCPAUX): Remove variables.
	(*asm*.c): Fix dependency to use XASMCCPAUX.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/c++-constructors.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_ACCESSFLAGS invocation.
	* m4/access.m4: Remove file.
	* unix.d: Assume <unistd.h> declares R_OK, W_OK, X_OK.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_ABORT invocation.
	* m4/abort.m4: Remove file.
	* unix.d (abort): Assume <stdlib.h> declares it.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_STDC invocation.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Remove AC_HEADER_STDC
	invocation.
	* lispbibl.d: Assume STDC_HEADERS.
	* stream.d: Likewise.
	* unix.d: Likewise.
	* win32.d: Don't set STDC_HEADERS.
	* malloc/gmalloc.c: Assume ANSI C or C++, STDC_HEADERS, memmove.
	* unix/sigsegv.c: Assume STDC_HEADERS.
	* modules/pcre/cpcre.c: Assume STDC_HEADERS.
	* modules/rawsock/configure.in: Test for unistd.h.
	* modules/rawsock/rawsock.c: Assume STDC_HEADERS.

2008-05-30  Sam Steingold  <sds@gnu.org>

	* m4/siginterrupt.m4: fix a typo:
	$ac_cv_func_strerror -> $ac_cv_func_siginterrupt

2008-05-29  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_DIR_HEADER invocation.