@@ -111,7 +111,6 @@ CL_SIGACTION           dnl DEFS HAVE_SIGACTION
 CL_SIGACTION_REINSTALL dnl DEFS SIGACTION_NEED_REINSTALL
 CL_SIGACTION_UNBLOCK   dnl DEFS SIGACTION_NEED_UNBLOCK
 CL_SIGINTERRUPT        dnl DEFS HAVE_SIGINTERRUPT, HAVE_SIGVEC
-CL_FPU_CONTROL         dnl DEFS HAVE_FPU_CONTROL_T, HAVE_SETFPUCW
 CL_RAISE               dnl DEFS HAVE_RAISE
 CL_PERROR              dnl DEFS HAVE_PERROR_DECL
 AC_CHECK_FUNCS(strerror sysconf getdtablesize memset setsid setpgid fchmod dnl
