@@ -1,5 +1,10 @@
 2008-05-31  Bruno Haible  <bruno@clisp.org>
 
+	* configure.in: Remove CL_FPU_CONTROL invocation.
+	* m4/fpu_control.m4: Remove file.
+
+2008-05-31  Bruno Haible  <bruno@clisp.org>
+
 	* configure.in: Remove CL_PROG_CP invocation.
 	* m4/cp.m4: Remove file.
 	* m4/ln.m4 (CL_PROG_LN): Assume "cp -p" works on Unix.
